Tue Jul 10 06:25:48 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/PerlACE/Process_Unix.pm:
          Now check_return_value will return 255 instead of 0 at the end
          when it reports an error.

Mon Jul  9 12:25:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp (fork_exec): Improved free allocation memory
          in the case where Windows CreateProcess() fails using
          ACE_Auto_Basic_Array_Ptr. Resolves Bugzilla #2983.

        * ace/Service_Config.cpp:
        * ace/CDR_Stream.h:
          Layout change

        * ace/Object_Manager.cpp:
        * ace/Object_Manager_Base.cpp:
        * ace/Object_Manager_Base.h:
          Changed dynamically_allocated to a real bool

Sun Jul  8 22:05:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl (cuserid):
          Only use L_cuserid when it is defined, fixes a problem on MacOS X 9.
          Thanks to Dennis Chernoivanov <cdi at tbricks dot com> for reporting
          this. This is part of bugzilla 2984

Sat Jul  7 17:45:34 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:

          Note about a minor change of behavior for ACE_INET_Addr setting
          with a string on IPv6 enabled builds.

        * ace/INET_Addr.cpp:

          More tweaks to setting the address based on a hostname string
          with IPv6 support compiled in. This cleans up errors on AIX.

Fri Jul  6 21:33:47 UTC 2007  Steve Huston  <shuston@riverace.com>

        * apps/FaCE:
        * contrib/FaCE: Moved the FaCE utility from apps to contrib. It's a
          useful utility for testing ACE+TAO apps on WinCE, but is not an
          ACE app. It's also not particularly well-maintained, but is a
          useful utility to keep for WinCE developers.

        * NEWS: Noted the above move.

Fri Jul  6 15:24:48 UTC 2007  Steve Huston  <shuston@riverace.com>
